// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <GifExpertApp /> should a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <CategoryAdd
    setCategory={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;

exports[`Test <GifExpertApp /> should show correct snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <CategoryAdd
    setCategory={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
